removed fixed header to correct link not showing up

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,12 +14,11 @@ body {
 /* Header */
 
 header {
-    position: fixed;
+    /* position: fixed; */
     z-index: 100;
     background-color: black;
     width: 100%;
-    /* padding-top: 0;
-    margin-top: 0; */
+   
 }
 
 header .content {
